--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "tsx src/server.ts",
+    "start:prod": "node ./dist/server.js",
+    "start:dev": "tsx src/server.ts",
     "build": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "lint:fix:prettier": "eslint . --fix && prettier --write .",
     "prettier": "prettier --write .",
     "prettier:fix": "npx prettier --check .",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -24,14 +24,15 @@
     "mongoose": "^8.9.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.18.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^22.10.5",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
     "eslint-config-standard": "^17.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.31.0",
